--- a/index.html
+++ b/index.html
@@ -5,7 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+      integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body class="container__main">
+    <!-- nav section -->
+    <header>
+      <nav class="nav__bar">
+        <a href="/" class="nav__brand">didi<span>.</span></a>
+        <ul class="nav__menu">
+          <li class="nav_items">
+            <a href="#home" class="nav__links">Home</a>
+          </li>
+          <li class="nav_items">
+            <a href="#about" class="nav__links">About</a>
+          </li>
+          <li class="nav_items">
+            <a href="#blogpost" class="nav__links">Blog Post</a>
+          </li>
+          <li class="nav_items">
+            <a href="#contactus" class="nav__links">Contact Us</a>
+          </li>
+          <li>
+            <i class="bi bi-moon-stars-fill"></i>
+          </li>
+        </ul>
+        <div class="mobile__icons">
+          <div class="hamburger__icon">
+            <i class="bi bi-list"></i>
+          </div>
+          <div class="moon__icon">
+            <i class="bi bi-moon-stars-fill"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- hero section -->
+    <section class="hero__section">
+      <div class="hero__left">
+        <h4 class="small__text">welcome to my world</h4>
+        <h1 class="hero__text">
+          Hi, I'm <span>Divine Emerald a</span> Frontend Developer
+        </h1>
+        <p class="paragraph__text">
+          I have a strong background in web development and a passion for
+          creating visually appealing and user-friendly interfaces.
+        </p>
+        <button class="hero__btn">My Portfolio</button>
+        <div class="hero__contact">
+          <h4 class="small__text">Follow Me</h4>
+          <div class="hero__icons">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-linkedin"></i>
+            <i class="bi bi-instagram"></i>
+          </div>
+        </div>
+      </div>
+      <div class="hero__right">
+        <img src="./assets/IMG_4255 (1).jpeg" alt="" class="hero__image" />
+      </div>
+    </section>
+  </body>
   <script src="./script.js"></script>
 </html>
